--- a/ToDo/JS/codereading_project/css/main.css
+++ b/ToDo/JS/codereading_project/css/main.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR|Roboto');
 
+html, body {
+  height:100%;
+}
+
 body {
   background: #f1f1f1;
 }
@@ -8,4 +12,19 @@ body {
   font-size:100%;
   font-family: 'Roboto','Noto Sans KR', sans-serif;
   box-sizing: border-box;
+}
+
+.wrap {
+  display: flex;
+  margin: auto;
+  height:100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+h1 {
+  text-align: center;
+  font-size:3rem;
+  font-weight: 600;
 }
