--- a/ToDo/JS/codereading_project/css/main.css
+++ b/ToDo/JS/codereading_project/css/main.css
@@ -5,7 +5,10 @@ html, body {
 }
 
 body {
-  background: #f1f1f1;
+  background-image: linear-gradient(#57AEEE, #3982E5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 * {
@@ -14,17 +17,68 @@ body {
   box-sizing: border-box;
 }
 
+
 .wrap {
+  background: #3C424A;
   display: flex;
-  margin: auto;
-  height:100%;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
+  padding:2rem;
+  color:white;
 }
 
-h1 {
+.todo-input-area {
+  margin-bottom:1rem;
+  padding-bottom:1rem;
+  border-bottom:1px solid #666666;
+}
+
+.todo-input-area h1 {
+  font-size:4rem;
   text-align: center;
-  font-size:3rem;
-  font-weight: 600;
+  margin-bottom:1rem;
+}
+
+.todo-input-area input {
+  background: #343A40;
+  border:none;
+  padding:1rem;
+  width:100%;
+  color:white;
+  outline: none;
+}
+
+.todo-list {
+
+}
+
+.todo-list ul {
+  
+}
+
+.todo-list ul li {
+  font-size:1.2rem;
+  padding:1rem 0.7rem;
+  display: flex;
+  border-bottom:1px solid #333333;
+}
+
+.todo-list ul li span {
+  opacity: 0;
+  cursor: pointer;
+  transition: all 0.4s;
+}
+
+.todo-list ul li span:first-child {
+  margin-left:auto;
+  margin-right:1rem;
+}
+
+.todo-list ul li:hover {
+  background: rgba(0, 0, 0, 0.3);
+  transition: all 0.5s;
+}
+
+.todo-list ul li:hover span {
+  opacity: 1;
 }
