feat: todo delete 버튼 추가

--- a/ToDo/JS/codereading_project/css/main.css
+++ b/ToDo/JS/codereading_project/css/main.css
@@ -82,3 +82,17 @@ body {
 .todo-list ul li:hover span {
   opacity: 1;
 }
+
+.todo-list ul li {
+  display: flex;
+  align-items: center;
+}
+
+.delete {
+  background: none;
+  border:none;
+  outline: none;
+  cursor: pointer;
+  font-size:1rem;
+  margin-left:auto;
+}
