--- a/ToDo/JS/codereading_project/css/main.css
+++ b/ToDo/JS/codereading_project/css/main.css
@@ -86,6 +86,7 @@ body {
 .todo-list ul li {
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .delete {
@@ -95,4 +96,18 @@ body {
   cursor: pointer;
   font-size:1rem;
   margin-left:auto;
+}
+
+.line-through::after {
+  content:"";
+  display: block;
+  border-top:1px solid #999999;
+  width:100%;
+  position: absolute;
+  top:50%;
+  left:0;
+}
+
+.line-through {
+  color:#666666;
 }
