--- a/ToDo/JS/codereading_project/css/main.css
+++ b/ToDo/JS/codereading_project/css/main.css
@@ -25,6 +25,7 @@ body {
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
   padding:2rem;
   color:white;
+  border-radius: 10px;
 }
 
 .todo-input-area {
@@ -87,14 +88,18 @@ body {
   display: flex;
   align-items: center;
   position: relative;
+  padding-right:auto;
 }
 
-.delete {
+button {
   background: none;
   border:none;
   outline: none;
   cursor: pointer;
   font-size:1rem;
+}
+
+.modify {
   margin-left:auto;
 }
 
