[wickedev] done item on cancel line

--- a/ToDo/React/wickedev_project/src/views/components/TodoList.module.scss
+++ b/ToDo/React/wickedev_project/src/views/components/TodoList.module.scss
@@ -1,7 +1,11 @@
 .container {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+
+}
+
+.title {
+    font-size: 20pt;
+}
+
+.list {
+    padding-left: 1.5rem;
 }
