[wickedev] todo move up & down on list + css styles

--- a/ToDo/React/wickedev_project/src/views/components/TodoItem.module.scss
+++ b/ToDo/React/wickedev_project/src/views/components/TodoItem.module.scss
@@ -1,3 +1,19 @@
+.container {
+    display: flex;
+    width: 100%;
+}
+
 .done {
     text-decoration-line: line-through;
+}
+
+.text {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.buttons {
+    display: flex;
+    margin-left: auto;
 }
