--- a/ToDo/React/wickedev_project/src/views/components/TodoList.module.scss
+++ b/ToDo/React/wickedev_project/src/views/components/TodoList.module.scss
@@ -1,5 +1,9 @@
 .container {
-
+    width: 20rem;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2),
+        0 1px 1px 0 rgba(0, 0, 0, 0.14),
+        0 2px 1px -1px rgba(0, 0, 0, 0.12);
+    padding: 1rem;
 }
 
 .title {
